# Connect4-imgui

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt
src/cliapp/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/core/: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  BoardScore.cpp  BoardScore.h  BoardScoreHelper.cpp  BoardScoreHelper.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Connect4.cpp  Connect4.h  Log.h
src/guiapp/: AppBase.h  CMakeLists.txt  Connect4App.cpp  Connect4App.h  main.cpp
test/: AiPlayerTest.cpp  BoardScoreHelperTest.cpp  BoardScoreTest.cpp  BoardTest.cpp  CMakeLists.txt
